<resources>
    <string name="app_name">Calcium Parent App</string>
    <string name="heads_text">Heads</string>
    <string name="tails_text">Tails</string>
    <string name="coin_message_headsWin">Congratulations!\nHeads Wins!</string>
    <string name="coin_message_tailsWin">Congratulations!\nTails Wins!</string>

    <string name="main_menu_title">Practical Parent!</string>
    <string name="main_menu_left_button">Coin Flip</string>
    <string name="main_menu_right_button">Timer</string>
    <string name="main_menu_top_button">Manage Members</string>

    <string name="coin_flip_title">Coin Flip</string>
    <string name="coin_flip_history_title">Coin Flip History</string>
    <string name="coin_flip_select_first_title">Coin Flip Select First</string>

    <string name="timer_title">Timer</string>
    <string name="timer_select_time_title">Select Timer Length</string>
    <string name="timer_custom_time_title">Timer Custom Time</string>

    <string name="manage_members_title">Manage Members</string>
    <string name="manage_family_add_title">Add New Family Member</string>
    <string name="manage_family_edit">Edit Family Member</string>
    <string name="manage_name_autofill">Name</string>
    <string name="manage_name_title">Name:</string>
    <string name="manage_add_cancel_btn">Cancel</string>
    <string name="manage_add_btn_text">Add</string>
    <string name="manage_editable_name">Name</string>
    <string name="manage_edit_delete_btn">delete</string>
    <string name="manage_edit_save_btn">save</string>

    <string name="action_history_title">show history</string>
    <string name="select_time_1_minute_text">1 Minute</string>
    <string name="manage_family_add_button_description">Opens ManageFamilyAdd</string>
    <string name="timer_length_extra">TIMER_LENGTH</string>
    <string name="btnOneMinute">1 Minute</string>
    <string name="btnTwoMinute">2 Minutes</string>
    <string name="btnThreeMinute">3 Minutes</string>
    <string name="btnFiveMinute">5 Minutes</string>
    <string name="btnTenMinute">10 Minutes</string>
    <string name="btnCustomMinute">Custom</string>
    <string name="btnStart">Start</string>
    <string name="btnResume">Resume</string>
    <string name="btnPause">Pause</string>
    <string name="btnReset">Reset</string>
    <string name="timer_notification_title">Timer</string>
    <string name="custom_time">Custom Time</string>
    <string name="txtfieldCustomTimeTitle">Time:</string>
    <string name="invalid_custom_time_toast">Please enter a valid number</string>
    <string name="txtFieldCustomTimeHint">Enter Minutes</string>
    <string name="customTimeBackgroundDescription">Relaxing Background</string>
    <string name="time">Time:</string>
    <string name="button_coin_fragment_continue">Continue</string>
    <string name="coin_continue">Continue</string>
    <string name="coin_textview_selection_choose">Choose Two Children Playing or None</string>
    <string name="coin_textView_pickerGeneric">Pick Heads or Tails</string>]

    <string name="game_data_text">game data text</string>

    <string name="family_member_present_toast_text_format">%s is already in the family!</string>
    <string name="family_member_welcome_toast_text_format">Welcome to the family %s!</string>
    <string name="imageView_coin">Contains images for coin</string>
    <string name="imageView_TimerBackground">Timer Background</string>
    <string name="timer_paused_notification_text">Timer Paused</string>
    <string name="alarm_notification_title">Alarm</string>
    <string name="alarm_notification_text">Timeout is Over!</string>
    <string name="coinflip_selection_incorrect_children_toast_text">Please select two or no children!</string>
    <string name="no_members_text">No family members added yet!</string>
    <string name="coin_button_flipAgain">Flip Again?</string>
    <string name="editTextFamilyMemberNameHint">Enter name</string>
    <string name="heads">heads</string>
    <string name="tails">tails</string>
    <string name="flip_result_text">\"Flip Result: \"</string>
    <string name="app_shared_preferences_key">APP_SHARED_PREFERENCES_KEY</string>
    <string name="helpscreen_credits">Created by the Calcium group\n\n
    Authored by:\n
      Braden Takashima\n
      Denise Siu\n
      Matthew So\n
      Peter Soava\n</string>

    <string name="helpscreen_resourceCredits">Resource Sources:\n
        Corgi head:\n https://i.pinimg.com/originals/61/52/40/6152408126fe3d5445c60af2f8474812.jpg\n\n
        Corgi butt:\n https://ih1.redbubble.net/image.596763878.0973/st,small,507x507-pad,600x600,f8f8f8.u1.jpg\n\n
        Timer service running method:\n https://stackoverflow.com/questions/600207/how-to-check-if-a-service-is-running-on-android\n\n
        Breath Sound Effect:\n Olson - Boards of Canada\n https://youtu.be/PzDupYdobnU</string>

    <string name="button_help">HELP</string>
    <string name="member_name">Member Name</string>
    <string name="picker_image">Picker Image</string>
    <string name="button_tasks">Tasks</string>
    <string name="action_edit_task">Edit Task</string>
    <string name="add_task_text">Add Task</string>
    <string name="edit_task_text">Edit Task</string>
    <string name="add_task_invalid_family_error_toast">Please register at least 1 family member before making a task</string>
    <string name="task_menu_no_family_error">Family members are required for tasks\nPlease Register at least 1 family member!</string>
    <string name="invalid_task_name_toast">Invalid task name</string>
    <string name="view_task_up_next_text">Up Next</string>
    <string name="view_task_confirm_task_text">Confirm Task</string>
    <string name="configure_task_delete_btn">Delete</string>
    <string name="configure_task_save_btn">Save</string>
    <string name="configure_task_task_name">Task Name</string>
    <string name="choose_photo_btn_text">choose photo</string>
    <string name="gallery_permission_toast">Need gallery permissions! Change this in settings.</string>
    <string name="camera_permission_toast">Need camera permissions! Change this in settings.</string>
    <string name="choose_new_photo_btn_text">choose new photo</string>
    <string name="take_new_photo_btn_text">take new photo</string>
    <string name="action_task_history">Task History</string>
    <string name="task_data_text">Task Child Name</string>
    <string name="task_history_title">Task History</string>
    <string name="task_date">Task Date</string>
    <string name="coin_flip_win_loss_icon">Win/Loss Icon</string>
    <string name="main_menu_take_breath_btn">take a breath</string>
    <string name="take_breath_begin_btn_text">begin</string>
    <string name="num_breaths_text">Number of Breaths:</string>
    <string name="begin_btn_text">begin</string>
    <string name="in_btn_text">in</string>
    <string name="out_btn_text">out</string>
    <string name="good_job_message">Good job!</string>
    <string name="breath_remaining_message">\u0020 breaths remaining!</string>
    <string name="exhale_toast">Breathe out now!</string>
    <string name="stop_inhale_toast">Take you finger off to breathe out.</string>
    <string name="allow_exhale_toast">You can breath out now.</string>
    <string name="inhale_help_toast">Press the button and inhale</string>
    <string name="num_of_breaths_text">1</string>
    <string name="plus_sign_btn_text">+</string>
    <string name="minus_sign_btn_text">-</string>
    <string name="breath_circle_content_desc">breating circle</string>
    <string name="change_speed">Change Speed</string>
    <string name="timer_speed_text_format">Time @%d%%</string>
    <string name="select_speed_multiplier">Select the Speed Multiplier</string>
    <string name="timer_speed_mul_25">25%</string>
    <string name="timer_speed_mul_50">50%</string>
    <string name="timer_speed_mul_75">75%</string>
    <string name="timer_speed_mul_100">100%</string>
    <string name="timer_speed_mul_200">200%</string>
    <string name="timer_speed_mul_300">300%</string>
    <string name="timer_speed_mul_400">400%</string>
    <string name="timer_multiplier_extra">TIMER_MULTIPLIER_EXTRA</string>

</resources>