<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/number_of_breaths_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_breaths_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />

    <TextView
        android:id="@+id/number_of_breaths_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_breaths_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/add_breaths_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_sign_btn_text"
        app:layout_constraintBottom_toBottomOf="@+id/number_of_breaths_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_of_breaths_text_view"
        app:layout_constraintTop_toTopOf="@+id/number_of_breaths_text_view" />

    <Button
        android:id="@+id/minus_breath_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus_sign_btn_text"
        app:layout_constraintBottom_toBottomOf="@+id/number_of_breaths_text_view"
        app:layout_constraintEnd_toStartOf="@+id/number_of_breaths_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/number_of_breaths_text_view" />

    <ImageView
        android:id="@+id/imageView_breathIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX=".3"
        android:scaleY=".3"
        android:contentDescription="@string/breath_circle_content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/breath_circle" />

    <Button
        android:id="@+id/breathe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_btn_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_breathIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_breathIcon"
        app:layout_constraintVertical_bias="0.89" />

</androidx.constraintlayout.widget.ConstraintLayout>