<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.manage.ManageFamilyEdit">

    <TextView
        android:id="@+id/manage_family_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_family_edit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_name_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_family_edit_title"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/editTextMemberNameForEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/manage_editable_name"
        app:layout_constraintBottom_toBottomOf="@+id/name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_title"
        android:autofillHints="" />

    <Button
        android:id="@+id/cancelEditMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/manage_add_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_title" />

    <Button
        android:id="@+id/deleteMemberBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_edit_delete_btn"
        app:layout_constraintBottom_toBottomOf="@+id/cancelEditMember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelEditMember" />

    <Button
        android:id="@+id/saveEditMemberBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_edit_save_btn"
        app:layout_constraintBottom_toBottomOf="@+id/cancelEditMember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelEditMember" />

</androidx.constraintlayout.widget.ConstraintLayout>