<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.manage.ManageFamilyAdd">

    <TextView
        android:id="@+id/manage_family_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_family_add_title"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_name_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_family_add_title"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/editTextFamilyMemberName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/manage_name_autofill"
        app:layout_constraintBottom_toBottomOf="@+id/name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_title" />

    <Button
        android:id="@+id/cancelAddNewMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/manage_add_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_title" />

    <Button
        android:id="@+id/addNewMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_add_btn_text"
        app:layout_constraintBottom_toBottomOf="@+id/cancelAddNewMemberButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelAddNewMemberButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>