<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".ui.coinflip.CoinFlip">

    <ImageView
        android:id="@+id/coin_imageView_picker"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="4"
        android:contentDescription="@string/picker_image"
        app:layout_constraintBottom_toBottomOf="@+id/coin_textView_name"
        app:layout_constraintEnd_toStartOf="@+id/coin_textView_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coin_textView_name"
        app:srcCompat="@drawable/default_profile_photo" />

    <TextView
        android:id="@+id/coin_textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:text="@string/member_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/coin_textView_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="225dp" />

    <TextView
        android:id="@+id/coin_textView_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:text="@string/coin_textView_pickerGeneric"
        android:textColor="@android:color/primary_text_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <ImageView
        android:id="@+id/imageView_coin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/imageView_coin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        app:srcCompat="@drawable/coin_heads"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_coin">

        <Button
            android:id="@+id/coin_button_heads"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/heads_text" />

        <Button
            android:id="@+id/coin_button_tails"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tails_text" />
    </LinearLayout>

    <Button
        android:id="@+id/coin_button_flipAgain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="5"
        android:text="@string/coin_button_flipAgain"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_coin" />

    <ImageButton
        android:id="@+id/coin_button_swapPicker"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        app:layout_constraintBottom_toBottomOf="@+id/coin_textView_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin_textView_name"
        app:layout_constraintTop_toTopOf="@+id/coin_textView_name"
        app:srcCompat="@drawable/ic_action_name"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>