<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenu">

    <TextView
        android:id="@+id/main_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_title"
        android:textColor="@android:color/primary_text_light"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/main_menu_left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/main_menu_left_button"
        app:layout_constraintBottom_toTopOf="@+id/main_menu_tasks_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_top_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/main_menu_right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_right_button"
        app:layout_constraintBottom_toBottomOf="@+id/main_menu_left_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_menu_left_button" />

    <Button
        android:id="@+id/main_menu_top_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="5dp"
        android:text="@string/main_menu_top_button"
        app:layout_constraintBottom_toTopOf="@+id/main_menu_left_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/main_menu_help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_help"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toBottomOf="@+id/main_menu_tasks_button"
        app:layout_constraintEnd_toEndOf="@+id/main_menu_right_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_menu_right_button"
        app:layout_constraintTop_toTopOf="@+id/main_menu_tasks_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/main_menu_tasks_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/button_tasks"
        app:layout_constraintBottom_toTopOf="@+id/main_menu_take_breath_button"
        app:layout_constraintEnd_toEndOf="@+id/main_menu_left_button"
        app:layout_constraintStart_toStartOf="@+id/main_menu_left_button"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_left_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_menu_take_breath_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="32dp"
        android:text="@string/main_menu_take_breath_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_menu_help_button"
        app:layout_constraintStart_toStartOf="@+id/main_menu_tasks_button"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_tasks_button"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>